# nautilus-watermark-service

./: .gitignore  ALTERNATIVE_SECRET_METHODS.md  CONNECT_TO_WATERMARK_SERVICE.md  Containerfile  ENCLAVE_SECRETS.md  HOW_TO_VERIFY_USER_DATA.md  HOW_TO_VIEW_ENCLAVE_LOGS.md  IMPLEMENTATION_CHECKLIST.md  LOCAL_TESTING.md  MACOS_TESTING.md  Makefile  RUN_LOCAL.md  STEGO_TEST_ENDPOINTS.md  TEE_ENDPOINT_DEBUG.md  TROUBLESHOOTING_ENCLAVE_BOOT.md  configure_enclave.sh  deny.toml  expose_enclave.sh  register_enclave.sh
.github/workflows/: README.md  SETUP.md  deploy-enclave.yml  move.yml  rust.yml
scripts/: VERIFY_CERT_PAIR.md  kill-port.sh  local-test.sh  run-local.sh  send-certs-local.sh  send-mtls-certs-from-secrets.sh  test-mtls-env.sh  verify-mtls-cert-pair.sh  verify-user-data.sh
src/nautilus-server/: Cargo.toml  run.sh
src/nautilus-server/src/: common.rs  lib.rs  main.rs  mtls_client.rs
src/nautilus-server/src/apps/zing-watermark/: allowed_endpoints.yaml  endpoints.rs  mod.rs  models.rs  seal_config.yaml  stego.rs  types.rs
src/nautilus-server/src/apps/zing-watermark/handlers/: mod.rs  private.rs  public.rs  seal.rs  secrets.rs  stego.rs  verify.rs  watermark.rs
