[package]
name = "nautilus-server"
version = "0.1.0"
edition = "2021"
authors = ["Mysten Labs <build@mystenlabs.com>"]
license = "Apache-2.0"
repository = "https://github.com/MystenLabs/nautilus"

[workspace]

[dependencies]
serde_json = "1.0.140"
serde_bytes = "0.11"
serde = "1.0"
serde_repr = "0.1"

tokio = { version = "1.43.0", features = ["full"] }
tracing = "0.1"
axum = { version = "0.7", features = ["macros"] }
rand = "0.8.5"
reqwest = { version = "0.11", features = ["json"] }
anyhow = "1.0"
serde_yaml = "0.9.34"
tower-http = { version = "0.6.0", features = ["cors"] }
fastcrypto = { git = "https://github.com/MystenLabs/fastcrypto", rev = "d1fcb853196c3de7888ed8fad74f419b8c8fbe3b", features = ["aes"] }
nsm_api = { git = "https://github.com/aws/aws-nitro-enclaves-nsm-api.git/", rev = "8ec7eac72bbb2097f1058ee32c13e1ff232f13e8", package="aws-nitro-enclaves-nsm-api", optional = false }
bcs = "0.1.6"
lazy_static = "1.4"
uuid = { version = "1.0", features = ["v4"] }
regex = { version = "1.5", optional = true }

sui-sdk-types = { version = "0.1.0", features = ["serde"] }
sui-crypto = { version = "0.1.0", features = ["ed25519"] }
# Pinned to a stable commit for reproducible builds
# Note: For git dependencies in subdirectories, Cargo requires both git and path
# If this fails, the Cargo version may not support this syntax
seal-sdk = { git = "https://github.com/MystenLabs/seal", rev = "7b4e8c39e9b9a2ef350d64c4f48cfa046ed21e8e", path = "crates/seal-sdk" }

# [features]
# weather-example = []
# twitter-example = ["regex"]
# seal-example = ["sui-crypto", "sui-sdk-types", "seal-sdk"]
base64 = "0.22.1"
aes-gcm = "0.10.3"
sui-rpc = "0.1.0"
