[package]
name = "nautilus-server"
version = "0.1.9"
edition = "2021"
authors = ["Mysten Labs <build@mystenlabs.com>"]
license = "Apache-2.0"
repository = "https://github.com/MystenLabs/nautilus"

[workspace]

[dependencies]
serde_json = "1.0.140"
serde_bytes = "0.11"
serde = "1.0"
serde_repr = "0.1"

tokio = { version = "1.43.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
axum = { version = "0.7", features = ["macros"] }
rand = "0.8.5"
reqwest = { version = "0.11", features = ["json", "rustls-tls", "native-tls"] }
anyhow = "1.0"
serde_yaml = "0.9.34"
tower-http = { version = "0.6.0", features = ["cors"] }
fastcrypto = { git = "https://github.com/MystenLabs/fastcrypto", rev = "d1fcb853196c3de7888ed8fad74f419b8c8fbe3b", features = ["aes"] }
nsm_api = { git = "https://github.com/aws/aws-nitro-enclaves-nsm-api.git/", rev = "8ec7eac72bbb2097f1058ee32c13e1ff232f13e8", package="aws-nitro-enclaves-nsm-api", optional = false }
bcs = "0.1.6"
lazy_static = "1.4"
uuid = { version = "1.0", features = ["v4"] }
regex = { version = "1.5", optional = true }

sui-sdk-types = { version = "0.1.0", features = ["serde"] }
sui-crypto = { version = "0.1.0", features = ["ed25519"] }
seal-sdk = { git = "https://github.com/Jarekkkkk/seal", branch = "jarek" }

base64 = "0.22.1"
aes-gcm = "0.10.3"
sui-rpc = "0.1.0"

[features]
default = []
zing-watermark = []

[dev-dependencies]
axum-test = "18.2.1"
http = "1.3.1"
tower = "0.5.2"
